# NimbusIQ

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  stadiumiq.db
app/: ai_assistant.py  app.py  database.py  pricing.py  services.py
app/blueprints/: __init__.py  main.py
app/static/css/: style.css
app/static/js/: admin.js  console.js  main.js  readiness.js
app/templates/: admin.html  ai_console.html  index.html  ops_hub.html  readiness.html
data/raw/: gcp_final_approved_dataset.csv
models/: linear_regression.pkl  preprocessor.pkl
scripts/: generate_dataset.py  retrain_model.py
src/data/: feature_engineering.py  loader.py  preprocessing.py
src/model/: evaluate.py  predict.py  save_model.py  train.py
src/utils/: config.py  logger.py
tests/: test_integration.py
